--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^1.1.3",
+    "element-plus": "^2.2.18",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
